Configurar cadena de conexion. Se deja el campo server vacio ya que dependera del equipo donde se ejecute.

--- a/RecruitmentManagementAPI/appsettings.json
+++ b/RecruitmentManagementAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=[Your SQL Serer Name]; Database=RecruitmentManagementDB; TrustServerCertificate=true; Trusted_Connection=true; MultipleActiveResultSets=true"
+  }
 }
