[Ref #5] Add recruiter registration and logIn using JWT. Protect endpoints.

--- a/RecruitmentManagementAPI/appsettings.json
+++ b/RecruitmentManagementAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=[Your SQL Serer Name]; Database=RecruitmentManagementDB; TrustServerCertificate=true; Trusted_Connection=true; MultipleActiveResultSets=true"
+  },
+  "AuthenticationConfig": {
+    "IssuerSigningKey": "SECRETKEYEXAMPLE@@##12345",
+    "RecruiterRole": "recruiter",
+    "CandidateRole": "cadidate"
   }
 }
