[Fix #5] Add Recruiter repository for the login. Refactor to have API constants and API settings clases.

--- a/RecruitmentManagementAPI/appsettings.json
+++ b/RecruitmentManagementAPI/appsettings.json
@@ -9,9 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=[Your SQL Serer Name]; Database=RecruitmentManagementDB; TrustServerCertificate=true; Trusted_Connection=true; MultipleActiveResultSets=true"
   },
-  "AuthenticationConfig": {
+  "AppSettings": {
     "IssuerSigningKey": "SECRETKEYEXAMPLE@@##12345",
-    "RecruiterRole": "recruiter",
-    "CandidateRole": "cadidate"
+    "PasswordRequirementsPattern":"@\"^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)(?=.*[!@#$%^&*()_+{}\\[\\]:;<>,.?~\\\\/-]).{8,}$\";"
   }
 }
