--- a/RecruitmentManagementAPI/appsettings.json
+++ b/RecruitmentManagementAPI/appsettings.json
@@ -11,6 +11,7 @@
   },
   "AppSettings": {
     "IssuerSigningKey": "SECRETKEYEXAMPLE@@##12345",
-    "PasswordRequirementsPattern":"@\"^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)(?=.*[!@#$%^&*()_+{}\\[\\]:;<>,.?~\\\\/-]).{8,}$\";"
+    "PasswordRequirementsPattern": "^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)(?=.*[!@#$%^&*()_+{}\\[\\]:;<>,.?~\\\\/-]).{8,}$",
+    "CsvLocalStorageFolderName": "CSVFiles"
   }
 }
